--- a/registro/templates/form.html
+++ b/registro/templates/form.html
@@ -91,13 +91,19 @@
     <div class="col">
       <input type="text" id="age" name="age"  class="form-control mb-4" placeholder="Idade" onchange ="validate()" >
     </div>
+  <div class="col">
+      <div class="input-group mb-3">
+        <div class="custom-file">
+          <input type="file" class="custom-file-input" name = "file" id="file">
+          <label class="custom-file-label" for="file" aria-describedby="inputGroupFileAddon02">Escolher arquivo</label>
+        </div>
 
-
+    </div>
+  </div>
   </div>
 
-
   <div class="alert alert-warning" role="alert">
-  Menores de 18 anos deverão preencher a <a href="https://www.dropbox.com/s/ahbhf30j95gtf9d/mover-autoriza%C3%A7%C3%A3o.docx?dl=0" target="_blank"> autorização</a> tendo assinatura do responsável e deverá ser entregue ao seu líder!
+  Menores de 18 anos deverão preencher a <a href="https://www.dropbox.com/s/ahbhf30j95gtf9d/mover-autoriza%C3%A7%C3%A3o.docx?dl=0" target="_blank"> autorização</a> e anexar foto ou cópia digital legível com assinatura do responsável!
   </div>
 
 
