--- a/registro/templates/home.html
+++ b/registro/templates/home.html
@@ -156,7 +156,7 @@
               <i class="fas fa-map-marked-alt text-primary mb-2"></i>
               <h4 class="text-uppercase m-0">Endereço</h4>
               <hr class="my-4">
-              <div class="small text-black-50">Santos Dumont, 810 - Pelotas, Rio Grande do Sul </div>
+              <div class="small text-black-50">Address Here</div>
             </div>
           </div>
         </div>
@@ -168,7 +168,7 @@
               <h4 class="text-uppercase m-0">Email</h4>
               <hr class="my-4">
               <div class="small text-black-50">
-                <a href="#">moversecretaria@gmail.com</a>
+                <a href="#">samplemail@mail.com</a>
               </div>
             </div>
           </div>
@@ -180,17 +180,17 @@
               <i class="fas fa-mobile-alt text-primary mb-2"></i>
               <h4 class="text-uppercase m-0">Telefone</h4>
               <hr class="my-4">
-              <div class="small text-black-50">(53) 3029-4063</div>
+              <div class="small text-black-50">(00) 0000-0000</div>
             </div>
           </div>
         </div>
       </div>
 
       <div class="social d-flex justify-content-center">
-        <a href="https://www.instagram.com/moverpelotas/" class="mx-2"target="_blank" >
+        <a href="#/" class="mx-2"target="_blank" >
           <i class="fab fa-instagram"></i>
         </a>
-        <a href="https://www.facebook.com/MoverPelotas/" class="mx-2" target="_blank">
+        <a href="#" class="mx-2" target="_blank">
           <i class="fab fa-facebook-f"></i>
         </a>
           </div>
@@ -201,7 +201,7 @@
   <!-- Footer -->
   <footer class="bg-black small text-center text-white-50">
     <div class="container">
-      Copyright &copy;  Mover Pelotas 2019
+      Copyright &copy;  YX 2019
     </div>
   </footer>
 
