--- a/registro/templates/form.html
+++ b/registro/templates/form.html
@@ -180,7 +180,7 @@
 <!-- Default form register -->
   <footer class="bg-black small text-center text-white-50">
     <div class="container">
-      Copyright &copy; Mover Pelotas 2019
+      Copyright &copy; YX 2019
     </div>
   </footer>
   
