--- a/registro/templates/home.html
+++ b/registro/templates/home.html
@@ -31,7 +31,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="">ALISTAMENTO JOVEM</a>
+      <a class="navbar-brand js-scroll-trigger" href="">SEU TITULO AQUI</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -57,7 +57,7 @@
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
         <h1 class="mx-auto my-0 text-uppercase">RECRUTAMENTO</h1>
-        <h2 class="text-white-50 mx-auto mt-2 mb-5">Você jovem, que está disposto a mudar de vida, e deseja fazer parte do exército de Cristo. <br> ESTÁ CONVOCADO!</h2>
+        <h2 class="text-white-50 mx-auto mt-2 mb-5">SEU TEXTO AQUI<br> ESTÁ CONVOCADO!</h2>
         <a href="{% url 'register'%}" class="btn btn-primary js-scroll-trigger">QUERO ME ALISTAR</a>
       </div>
     </div>
@@ -69,8 +69,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2 class="text-white mb-4">POR QUE DEVO ME ALISTAR?</h2>
-          <p class="text-white-50">Escutem! Há um barulho nos montes como o de uma grande multidão! Escutem! É uma gritaria entre os reinos, como nações formando uma imensa multidão! O Senhor dos Exércitos está reunindo um exército para a guerra. <br>
-<b>Isaías 13:4</b></p>
+          <p class="text-white-50">SEU TEXTO AQUI</p>
         </div>
       </div>
 
